# wubrag

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: chunk_indexing.rs  document_chunking.rs  document_collection.rs  end_to_end.rs
proto/: wubrag.proto
src/: chunking.rs  document.rs  embedding.rs  indexing.rs  lib.rs  main.rs
tests/: test_document_collection.rs
