[package]
name = "wubrag"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
tokio = {version= "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
wubraglib = {git = "https://github.com/JGM01/wubraglib.git", branch = "main"}

[build-dependencies]
tonic-prost-build = "*"
